Fix bug: commit button not showing

--- a/Software/react-canvas-draw/src/App.css
+++ b/Software/react-canvas-draw/src/App.css
@@ -847,7 +847,7 @@ button:hover {
     background: #cebd90;
     width: 500px;
     /* min-height: 90%; */
-    min-height: 600px;
+    min-height: 650px;
     border-radius: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-shadow: 10px 25px 15px rgb(66, 66, 66);
